# semantic-entity-matching

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  example.env  example.localhost.env  mkdocs.yml  pyproject.toml  pyrightconfig.json  ruff.toml  terraform  terraform.Dockerfile
.cursor/commands/: code-quality-review.md  fix-linter-errors.md  fix-tests.md
.cursor/rules/: citation.mdc  cli-commands.mdc  code-organization.mdc  dependency-management.mdc  package-management.mdc  project-overview.mdc  python-standards.mdc  rules-management.mdc  terraform.mdc  testing.mdc
.github/workflows/: lint.yml
apps/cli/: main.py  utils.py
apps/cli/commands/: dev.py  evaluate.py  ingest.py  search.py  setup.py  tokens.py  vectorize.py
apps/lambda/ingest/: main.py  requirements.txt
apps/web/: main.py
apps/web/utils/: __init__.py  get_embedding_callback.py  get_opensearch_client.py  load_project_root.py  web_reporter.py
deployment/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
deployment/modules/lambda-ingest/: main.tf  outputs.tf  variables.tf
deployment/modules/opensearch/: main.tf  outputs.tf  variables.tf
docs/: cli-reference.md  deploy-aws.md  getting-started.md  index.md  lambda-handler.md  web-ui.md
docs/development/: deployment.md  environment.md  index.md  testing.md  tooling.md
examples/: end-to-end-example.ipynb
lib/: async_batch_processor.py  console_reporter.py  counter.py  data_reader.py  dynamic_semaphore.py  evaluate.py  ingest.py  interfaces.py  logging.py  null_reporter.py  rerank.py  search_and_rerank.py  setup_opensearch.py  utils.py  vectorize_columns.py
lib/bedrock/: __init__.py  client.py  types.py
lib/bedrock/adapters/: base_model_adapter.py  cohere_model_adapter.py  titan_model_adapter.py
lib/bedrock/commands/: base_command.py  converse_command.py  invoke_embedding_model_command.py  invoke_model_command.py
lib/file_token_estimation/: __init__.py  file_token_estimator.py  formats.py  methods.py  result.py
lib/opensearch/: __init__.py  client.py
lib/opensearch/entities/: __init__.py  base_entity.py  index.py
lib/opensearch/repositories/: __init__.py  index.py  (+1 more)
tests/: conftest.py  run.sh
(+30 files in other folders)
