[project]
name = "entity-matching-with-embeddings"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "boto3>=1.40.56",
    "boto3-stubs[bedrock,bedrock-agent-runtime,bedrock-runtime,opensearch]>=1.40.56",
    "nest-asyncio>=1.6.0",
    "openpyxl>=3.1.5",
    "opensearch-py>=3.0.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "streamlit>=1.50.0",
    "tiktoken>=0.8.0",
    "tqdm>=4.67.1",
    "types-aioboto3[bedrock]>=15.5.0",
    "types-aiobotocore[bedrock-runtime]>=2.25.2",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-dotenv>=0.5.2",
    "pytest-mock>=3.15.1",
    "moto>=5.1.16",
    "responses>=0.25.8",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs-shadcn>=0.9.7",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-autorefs>=1.2.0",
]
jupyter = [
    "ipykernel>=7.1.0",
]
dev = [
    "pre-commit>=3.8.0",
    "pyright>=1.1.407",
    "ruff>=0.14.6",
    "pandas-stubs>=2.3.2.250926",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-vv",  # Very verbose output
    "-s",   # Show print statements and stdout
    "--tb=long",  # Show full traceback
    "-l",   # Show local variables in tracebacks
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "localhost: Localhost only tests",
    "aws: AWS only tests",
    "slow: Slow running tests",
]
# pytest-dotenv configuration
env_override_existing_values = true

[tool.coverage.run]
source = ["apps","lib"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
